add style to the project

--- a/art/todo_list/src/components/Form/AddTask.html
+++ b/art/todo_list/src/components/Form/AddTask.html
@@ -34,6 +34,6 @@
 
 <div class="justify-center">
     <Categories on:addCategory={newCategory}/>
-    <input class="w-full" type="text" bind:value={search} placeholder="Add a task">
-    <button class="w-full"  on:click|preventDefault={submitText}>Add a task</button>
+    <input class="w-full h-12" type="text" bind:value={search} placeholder="Add a task">
+    <button class="w-full h-10"  on:click|preventDefault={submitText}>Add a task</button>
 </div>
