--- a/art/todo_list/src/components/Navbar.html
+++ b/art/todo_list/src/components/Navbar.html
@@ -1,3 +1,17 @@
-<div class='test'>
-	<h1 class='text-center'>Todo List</h1>
+<style>
+	.nav{
+		height: 40vh;
+		background-color: #1B9AAA;
+	}
+
+	h1{
+		color: #DDDBCB;
+		font-size: 8em;
+	}
+
+
+</style>
+
+<div class="nav flex justify-center items-center">
+	<h1 class='font-serif w-auto'>Todo List</h1>
 </div>
