add some style by night

--- a/art/todo_list/src/components/List.html
+++ b/art/todo_list/src/components/List.html
@@ -1,19 +1,17 @@
 <script>
+    import Sortable from 'sortablejs';
+    import { createEventDispatcher } from 'svelte';
+    import { fly } from 'svelte/transition';
+    
     export let tasks;
     export let category;
     export let giphy;
+    export let show
 
-    import { createEventDispatcher } from 'svelte';
-    import { fly } from 'svelte/transition';;
-    
     const dispatch = createEventDispatcher();
 
     $: array = tasks.filter(t => t.category == category)
 
-    const test = () => {
-        console.log(tasks);
-        console.log(category)
-    }
 
     const deleteTask = (todo) => {
         dispatch('delete', {
@@ -35,11 +33,22 @@
     
     }
 
+    let showBis = "-"
+
+    const showList = () => {
+        show = !show
+        if(show === true){
+            showBis = "-"
+        } else {
+            showBis = "+"
+        }
+    }
+
 </script>
 
 
-
 <style>
+
     .categorie{
         
         background-image:url({gif});
@@ -59,42 +68,51 @@
 
     }
 
-    .list{
+    .lists{
 
         background-color: #F5F1E3;
+        min-height: 600px;
 
     }
-    
+
+    .list{
+
+        max-width: 210px;
+    }
+
 </style>
 
-<div class="mt-12 container m-4 rounded-md list shadow-md " transition:fly="{{ y: 200, duration: 2000 }}">
+
+<div class="mt-12 container m-4 rounded-md lists shadow-md ">
+
     
     
     <h2 class="text-center font-mono">{category}</h2>
     
     <div class="categorie m-auto mb-12" style="background-image:url({gif})"></div>
-    
-    <div class="text-center">
-        <ul transition:fly="{{ y: 200, duration: 2000 }}">
-            {#each array as task}
-            <li class="pb-4" transition:fly="{{ y: -200, duration: 500 }}">
-                <input type="checkbox" bind:checked={task.completed} on:click={() => {handleChangeHour(task)}}>
-                {#if !task.completed}
-                    <div class="text-red-600" >
-                        <p>* {task.todo} * </p>                           
-                        <p>add task at: {task.date}</p> 
-                    </div>
-                {:else}
-                    <div class="text-green-600">
-                        <p>* {task.todo} * </p>     
-                        <p>do since: {task.date}</p> 
-                    </div>
-                {/if}
-                <span><button on:click|preventDefault={() => deleteTask(task)}>supprimer</button></span>
-            </li>
-            {/each}
-        </ul>   
+
+    <div class="flex justify-end">
+        <button on:click={showList}>{showBis}</button>
     </div>
+        
+    {#if show === true}
+        <div class="flex justify-center">
+            <ul>
+                {#each array as task}
+                <li class="pb-4 list" transition:fly="{{ y: -200, duration: 500 }}">
+                    {#if !task.completed}                
+                        <input class="text-red-600" type="checkbox" bind:checked={task.completed} on:click={() => {handleChangeHour(task)}}> <span class="text-red-600">{task.todo}</span>
+                        <p>add task at: {task.date}</p> 
+                    {:else}
+                        <input class="text-red-600" type="checkbox" bind:checked={task.completed} on:click={() => {handleChangeHour(task)}}> <span class="text-green-600">{task.todo}</span>
+                        <p>ok since: {task.date}</p> 
+                    {/if}
+                    <span><button class="color-red-100" on:click|preventDefault={() => deleteTask(task)}>supprimer</button></span>
+                </li>
+                {/each}
+            </ul>   
+        </div>
+    {/if}
 </div>
 
 <!-- {JSON.stringify(array)} -->
