--- a/art/todo_list/src/components/form/AddTask.html
+++ b/art/todo_list/src/components/form/AddTask.html
@@ -33,7 +33,7 @@
 <style>
     
     #navbar{
-		height: 16vh;
+		height: 18vh;
 		background-color: #1B9AAA;
 	}
 
@@ -54,7 +54,7 @@
     </ul>
 </div>
 
-<div class="flex justify-center mt-8">
+<div class="flex justify-center mt-8 mb-10">
     <div class="w-4/5" id="addTask">
         <Categories on:addCategory={newCategory}/>
         <br>
